# computer-vision-defect-detector

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: README.md
docs/: architecture.md  experiment_log.md  model_card.md
models/: test_metrics.json
src/defect_detector/: api.py  app.py  config.py  data.py  evaluate.py  explain.py  model.py  predict.py  train.py
tests/: test_api.py  test_data.py  test_model.py  test_predict.py  test_smoke.py
