[project]
name = "computer-vision-defect-detector"
version = "0.1.0"
description = "Transfer learning image classification with Grad-CAM explainability for defect detection."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Luke Gardiner" }]
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.48.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.3.0",
    "grad-cam>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "httpx>=0.24.0",
    "pyright>=1.1.411",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defect_detector"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, N: naming, UP: pyupgrade,
# B: bugbear, SIM: simplify, C4: comprehensions
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportMissingImports = true
reportPrivateImportUsage = false
reportAttributeAccessIssue = false
reportReturnType = false
reportArgumentType = false
reportOperatorIssue = false
reportOptionalSubscript = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing"
